--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
